css/example.css
body {
  padding: 0px;
  margin: 0px;
  background-color: #ddd;
  line-height: 1.5em;
  color: #fff;
  text-align: center;
  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
  font-size: 16px; }

/* Masonry Layout */
.social-feed-element {
  width: 31%; 
  margin-left: 10px; 
  margin-top: 0px;
  margin-bottom: 10px;
}
.social-feed-container {
  width: 100%;
}

.container {
  display: inline-block;
  width: 100%; }

/*sections*/
section, .intro, .stripe {
  display: block;
  padding: 20px 0px; }

.intro {
  font-weight: 100;
  background-image: radial-gradient(ellipse farthest-side at 100% 100%, #85D8CE 10%, #085078 120%); }
  .intro .controls {
    margin: 20px 0px 0px 0px; }

.stripe {
  font-weight: 100;
  background-color: #444; }

/*Markup elements*/
section.intro h1, .intro h1, .intro.stripe h1 {
  font-family: "Indie Flower", cursive;
  font-size: 70px;
  font-weight: 100; }
section.intro p, .intro p, .intro.stripe p {
  font-size: 20px; }
section.intro i, .intro i, .intro.stripe i {
  font-weight: 200; }
section.intro hr, .intro hr, .intro.stripe hr {
  opacity: 0.2;
  background-color: #fff;
  border-color: #fff;
  border-bottom: none; }

/*buttons & fields*/
.button, .input {
  text-align: center;
  font-size: 20px;
  font-weight: 200;
  color: #fff;
  background: none;
  text-decoration: none;
  border: 1px solid #fff;
  border-radius: 4px;
  transition: 0.25s;
  -webkit-backface-visibility: hidden; }

.button {
  padding: 7px 10px;
  background-color: rgba(255, 255, 255, 0.2); }
  .button:hover {
    cursor: pointer;
    color: rgba(0, 50, 150, 0.5);
    text-decoration: none;
    background-color: #FFF; }

.input {
  height: 41px;
  padding: 7px;
  -moz-box-sizing: border-box;
  box-sizing: border-box; }
  .input:hover {
    background: none;
    color: #fff; }

.field {
  margin-top: 7px; }

.field-right {
  width: 20%;
  height: 41px;
  float: right;
  border-top-left-radius: 0px;
  border-bottom-left-radius: 0px; }

.field-left {
  width: 80%;
  float: left;
  border-right: none;
  border-top-right-radius: 0px;
  border-bottom-right-radius: 0px; }

.referral {
  text-align: left; }
  .referral a {
    color: white;
    font-weight: 200; }
  .referral ul {
    list-style: none; }

/*# sourceMappingURL=example.css.map */

